# my-ai-cookbooks

./: .gitignore  README.md  ann.ipynb  boston_house_prices.ipynb  clip.ipynb  cross_entropy.ipynb  florence-2-simple-inference.ipynb  olama_instructor.ipynb  phi3-vision.ipynb  pyproject.toml  requirements.txt  transformers.ipynb
graph/: graph.ipynb
gym_playground/: lesson_1.py
notebooks/: ann.ipynb  phi3-vision.ipynb  transformers.ipynb
notebooks/auto-encoder/: ae-basic.ipynb
notebooks/basic-ml/regression/: distribution.ipynb  house_prices.ipynb  linear-regression.ipynb
notebooks/gym_playground/: lesson_2.py
notebooks/pytorch/: RNN_name_classifier.ipynb  simple_classifier.ipynb  simple_network.ipynb  torch_basic.ipynb
notebooks/regression/: distribution.ipynb  house_prices.ipynb  linear-regression.ipynb
notebooks/yolo/: yolo_basic.ipynb
pytorch/: simple_network.ipynb
regression/: distribution.ipynb  house_prices.ipynb  linear-regression.ipynb
